kustomize/base/deployment.yaml
---
# Source: mq-sender-service/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mq-sender-service
  annotations:
    app.openshift.io/vcs-ref: 9363c7d02f9f98c4715b254a9ae8d5b6e1df5241
    app.openshift.io/vcs-uri: https://github.com/GitOps-MQ-12042022/mq-sender-service
  labels:
    app.kubernetes.io/name: mq-sender-service
    helm.sh/chart: mq-sender-service-1.0.0-rc0.0.2
    app.kubernetes.io/instance: mq-sender-service
    app: mq-sender-service
    app.kubernetes.io/part-of: inventory
    app.openshift.io/runtime: spring
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: mq-sender-service
      app.kubernetes.io/instance: mq-sender-service
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mq-sender-service
        app.kubernetes.io/instance: mq-sender-service
    spec:
      serviceAccountName: mq-sender-service
      volumes:
      containers:
        - name: mq-sender-service
          image: "replace"
          imagePullPolicy: IfNotPresent
          volumeMounts:
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
              scheme: HTTP
            timeoutSeconds: 10
            periodSeconds: 30
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
              scheme: HTTP
            timeoutSeconds: 10
            periodSeconds: 30
            successThreshold: 1
            failureThreshold: 3
          resources:
            null
